--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -13,4 +13,21 @@ a {
 
 * {
   box-sizing: border-box;
+}
+ul {
+  background: #333;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+ul li {
+  list-style: none;
+  float: left;
+  display: block;
+}
+ul li a {
+  height: 30px;
+  color: #fff;
+  text-align: center;
+  margin-right: 10px;
 }
